2003-09-09  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/script.cpp (script_node::update):
	Moved check for modified eventOuts outside of conditional
	testing whether an event had been received; per patch from
	Steffen Mader <s_mader@users.sourceforge.net>.

2003-09-08  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp:  Fixed recursive
	calls to {Node}::modify.

2003-09-08  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/script.cpp:  Corrected use of
	auto_ptr<>::release.

2003-09-08  Braden McDaniel  <braden@endoframe.com>

	Require Automake 1.6.3.

	* configure.ac
	* Makefile.am

2003-09-08  Braden McDaniel  <braden@endoframe.com>

	* configure.ac:  Modernize usage of AC_OUTPUT; use
	AC_CONFIG_FILES.
	* Makefile.am:  Require Automake 1.7.

2003-09-02  Braden McDaniel  <braden@endoframe.com>

	* configure.ac:  Provide help text for DOXYGEN variable.

2003-09-02  Braden McDaniel  <braden@endoframe.com>

	Fixes for gcc 3.2.2.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2003-09-01  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/doc.cpp (doc2::filename):  Fixed
	problem resolving file URLs on Windows.

2003-09-01  Braden McDaniel  <braden@endoframe.com>

	Quelled some stupid warnings in Release builds.

	* ide-projects/Windows/VisualC7/OpenVRML/lookat/lookat.vcproj
	* ide-projects/Windows/VisualC7/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC7/OpenVRML/openvrml-gl/openvrml-gl.vcproj

2003-09-01  Braden McDaniel  <braden@endoframe.com>

	Fixed a bunch of warnings from cl 13.00.9466.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/basetypes.h
	* src/libopenvrml/openvrml/bounding_volume.cpp
	* src/libopenvrml/openvrml/browser.cpp